--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,3 +90,9 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
