--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,7 +109,7 @@ body {
   text-align: center;
   text-decoration: none;
   color: #fff;
-  background-color: #ff5252;
+  background-color: #3B3853;
   border: 2px solid #000;
   border-radius: 10px;
   box-shadow: 5px 5px 0px #fff;
@@ -119,9 +119,9 @@ body {
 
 .comic-button:hover {
   background-color: #fff;
-  color: #ff5252;
-  border: 2px solid #ff5252;
-  box-shadow: 5px 5px 0px #ff5252;
+  color: #3B3853;
+  border: 2px solid #3B3853;
+  box-shadow: 5px 5px 0px #3B3853;
 }
 
 .comic-button:active {
