--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,11 +96,15 @@ body {
   width: 100%;
   height: 100%;
   pointer-events: none;
-  background-image: radial-gradient(circle, rgb(153, 133, 133) 1px, transparent 1px);
+  background-image: radial-gradient(
+    circle,
+    rgb(153, 133, 133) 1px,
+    transparent 1px
+  );
   background-size: 3px 3px;
   opacity: 0.3;
 }
-/* From Uiverse.io by Gautammsharma */ 
+/* From Uiverse.io by Gautammsharma */
 .comic-button {
   display: inline-block;
   padding: 10px 20px;
@@ -109,7 +113,7 @@ body {
   text-align: center;
   text-decoration: none;
   color: #fff;
-  background-color: #3B3853;
+  background-color: #3b3853;
   border: 2px solid #000;
   border-radius: 10px;
   box-shadow: 5px 5px 0px #fff;
@@ -119,9 +123,9 @@ body {
 
 .comic-button:hover {
   background-color: #fff;
-  color: #3B3853;
-  border: 2px solid #3B3853;
-  box-shadow: 5px 5px 0px #3B3853;
+  color: #3b3853;
+  border: 2px solid #3b3853;
+  box-shadow: 5px 5px 0px #3b3853;
 }
 
 .comic-button:active {
@@ -132,8 +136,8 @@ body {
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 form {
@@ -142,7 +146,8 @@ form {
   gap: 15px;
 }
 
-input, button {
+input,
+button {
   padding: 10px;
   border-radius: 5px;
   border: none;
@@ -162,4 +167,136 @@ button:hover {
 div {
   font-size: 1.2rem;
   line-height: 1.6;
+}
+
+/* From Uiverse.io by Prakhar227 */
+.orange {
+  color: #B17ABE;
+}
+
+.form-container {
+  max-width: 700px;
+  margin: 30px;
+  background-color: #001925;
+  padding: 30px;
+  border-left: 5px solid #B17ABE;
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% calc(100% - 20px),
+    calc(100% - 20px) 100%,
+    0 100%
+  );
+}
+
+.heading {
+  display: block;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+.c1 {
+  display: block;
+  color: #B17ABE;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.c2 {
+  display: block;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.form-container .form .input {
+  color: #87a4b6;
+  width: 100%;
+  background-color: #002733;
+  border: none;
+  outline: none;
+  padding: 10px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+  border-left: 1px solid transparent;
+}
+
+.form-container .form .input:focus {
+  border-left: 5px solid #f438db;
+}
+
+.form-container .form .textarea {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  outline: none;
+  background-color: #013747;
+  color: #B17ABE;
+  font-weight: bold;
+  resize: none;
+  max-height: 150px;
+  margin-bottom: 20px;
+  border-left: 1px solid transparent;
+  transition: all 0.2s ease-in-out;
+}
+
+.form-container .form .textarea:focus {
+  border-left: 5px solid #B17ABE;
+}
+
+.form-container .form .button-container {
+  display: flex;
+  gap: 10px;
+}
+
+.form-container .form .button-container .send-button {
+  flex-basis: 70%;
+  background: #B17ABE;
+  padding: 10px;
+  color: #001925;
+  text-align: center;
+  font-weight: bold;
+  border: 1px solid transparent;
+  transition: all 0.2s ease-in-out;
+}
+
+.form-container .form .button-container .send-button:hover {
+  background: transparent;
+  border: 1px solid #ff7a01;
+  color: #B17ABE;
+}
+
+.form-container .form .button-container .reset-button-container {
+  filter: drop-shadow(1px 1px 0px #ff7a01);
+  /* flex-basis: 30%; */
+}
+
+.form-container .form .button-container .reset-button-container .reset-button {
+  position: relative;
+  text-align: center;
+  padding: 10px;
+  color: #B17ABE;
+  font-weight: bold;
+  background: #001925;
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% calc(100% - 10px),
+    calc(100% - 10px) 100%,
+    0 100%
+  );
+  transition: all 0.2s ease-in-out;
+}
+
+.form-container
+  .form
+  .button-container
+  .reset-button-container
+  .reset-button:hover {
+  background: #B17ABE;
+  color: #001925;
 }
