--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,13 +155,14 @@ button {
 }
 
 button {
-  background-color: #2a9d8f;
+  background-color: #161414;
   color: #fff;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 button:hover {
-  background-color: #21867a;
+  background-color: #b17abe;
 }
 
 div {
@@ -171,7 +172,7 @@ div {
 
 /* From Uiverse.io by Prakhar227 */
 .orange {
-  color: #B17ABE;
+  color: #b17abe;
 }
 
 .form-container {
@@ -179,7 +180,7 @@ div {
   margin: 30px;
   background-color: #001925;
   padding: 30px;
-  border-left: 5px solid #B17ABE;
+  border-left: 5px solid #b17abe;
   clip-path: polygon(
     0 0,
     100% 0,
@@ -198,7 +199,7 @@ div {
 }
 .c1 {
   display: block;
-  color: #B17ABE;
+  color: #b17abe;
   font-size: 1rem;
   font-weight: 600;
   margin-bottom: 20px;
@@ -235,7 +236,7 @@ div {
   border: none;
   outline: none;
   background-color: #013747;
-  color: #B17ABE;
+  color: #b17abe;
   font-weight: bold;
   resize: none;
   max-height: 150px;
@@ -245,7 +246,7 @@ div {
 }
 
 .form-container .form .textarea:focus {
-  border-left: 5px solid #B17ABE;
+  border-left: 5px solid #b17abe;
 }
 
 .form-container .form .button-container {
@@ -255,7 +256,7 @@ div {
 
 .form-container .form .button-container .send-button {
   flex-basis: 70%;
-  background: #B17ABE;
+  background: #b17abe;
   padding: 10px;
   color: #001925;
   text-align: center;
@@ -267,7 +268,7 @@ div {
 .form-container .form .button-container .send-button:hover {
   background: transparent;
   border: 1px solid #ff7a01;
-  color: #B17ABE;
+  color: #b17abe;
 }
 
 .form-container .form .button-container .reset-button-container {
@@ -279,7 +280,7 @@ div {
   position: relative;
   text-align: center;
   padding: 10px;
-  color: #B17ABE;
+  color: #b17abe;
   font-weight: bold;
   background: #001925;
   clip-path: polygon(
@@ -297,6 +298,378 @@ div {
   .button-container
   .reset-button-container
   .reset-button:hover {
-  background: #B17ABE;
+  background: #b17abe;
   color: #001925;
+}
+
+@font-face {
+  font-family: "MyCustomFont";
+  src: url("../../public/assets/fonts/Okashi.ttf") format("truetype");
+}
+
+.custom-font {
+  font-family: "MyCustomFont", sans-serif;
+}
+
+.loading-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom, #7e22ce, #310436, #37095b);
+  overflow: hidden;
+}
+
+.loading-container:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  bottom: 0;
+  left: 0;
+  border-radius: 10px;
+  animation: movingLine 2.4s infinite ease-in-out;
+}
+
+@keyframes movingLine {
+  0% {
+    opacity: 0;
+    width: 0;
+  }
+
+  33.3%,
+  66% {
+    opacity: 0.8;
+    width: 100%;
+  }
+
+  85% {
+    width: 0;
+    left: initial;
+    right: 0;
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    width: 0;
+  }
+}
+
+.loading-text {
+  font-size: 5vw;
+  line-height: 64px;
+  letter-spacing: 10px;
+  margin-bottom: 32px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.loading-text span {
+  animation: moveLetters 2.4s infinite ease-in-out;
+  transform: translateX(0);
+  position: relative;
+  display: inline-block;
+  opacity: 0;
+  text-shadow: 0px 2px 10px rgba(46, 74, 81, 0.3);
+}
+
+.loading-text span:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.loading-text span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.loading-text span:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.loading-text span:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.loading-text span:nth-child(5) {
+  animation-delay: 0.5s;
+}
+.loading-text span:nth-child(6) {
+  animation-delay: 0.6s;
+}
+.loading-text span:nth-child(7) {
+  animation-delay: 0.7s;
+}
+
+@keyframes moveLetters {
+  0% {
+    transform: translateX(-15vw);
+    opacity: 0;
+  }
+
+  33.3%,
+  66% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateX(15vw);
+    opacity: 0;
+  }
+}
+
+.card {
+  --white: hsl(0, 0%, 100%);
+  --black: hsl(240, 15%, 9%);
+  --paragraph: hsl(0, 0%, 83%);
+  --line: hsl(240, 9%, 17%);
+  --primary: hsl(266, 92%, 58%);
+
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  padding: 1rem;
+  width: 19rem;
+  background-color: hsla(240, 15%, 9%, 1);
+  background-image: radial-gradient(
+      at 88% 40%,
+      hsla(240, 15%, 9%, 1) 0px,
+      transparent 85%
+    ),
+    radial-gradient(at 49% 30%, hsla(240, 15%, 9%, 1) 0px, transparent 85%),
+    radial-gradient(at 14% 26%, hsla(240, 15%, 9%, 1) 0px, transparent 85%),
+    radial-gradient(at 0% 64%, hsla(263, 93%, 56%, 1) 0px, transparent 85%),
+    radial-gradient(at 41% 94%, hsla(284, 100%, 84%, 1) 0px, transparent 85%),
+    radial-gradient(at 100% 99%, hsla(306, 100%, 57%, 1) 0px, transparent 85%);
+
+  border-radius: 1rem;
+  box-shadow: 0px -16px 24px 0px rgba(255, 255, 255, 0.25) inset;
+}
+
+.card .card__border {
+  overflow: hidden;
+  pointer-events: none;
+
+  position: absolute;
+  z-index: -10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+  background-image: linear-gradient(
+    0deg,
+    hsl(0, 0%, 100%) -50%,
+    hsl(0, 0%, 40%) 100%
+  );
+
+  border-radius: 1rem;
+}
+
+.card .card__border::before {
+  content: "";
+  pointer-events: none;
+
+  position: fixed;
+  z-index: 200;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%), rotate(0deg);
+  transform-origin: left;
+
+  width: 200%;
+  height: 10rem;
+  background-image: linear-gradient(
+    0deg,
+    hsla(0, 0%, 100%, 0) 0%,
+    hsl(277, 95%, 60%) 40%,
+    hsl(277, 95%, 60%) 60%,
+    hsla(0, 0%, 40%, 0) 100%
+  );
+
+  animation: rotate 8s linear infinite;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.card .card_title__container .card_title {
+  font-size: 1rem;
+  color: var(--white);
+}
+
+.card .card_title__container .card_paragraph {
+  margin-top: 0.25rem;
+  width: 65%;
+
+  font-size: 0.5rem;
+  color: var(--paragraph);
+}
+
+.card .line {
+  width: 100%;
+  height: 0.2rem;
+  background-color: var(--line);
+
+  border: none;
+}
+
+.card .card__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.card .card__list .card__list_item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.card .card__list .card__list_item .check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 1rem;
+  height: 1rem;
+  background-color: var(--primary);
+
+  border-radius: 50%;
+}
+
+.card .card__list .card__list_item .check .check_svg {
+  width: 0.75rem;
+  height: 0.75rem;
+
+  fill: var(--black);
+}
+
+.card .card__list .card__list_item .list_text {
+  font-size: 0.75rem;
+  color: var(--white);
+}
+
+.card .button {
+  cursor: pointer;
+
+  padding: 0.5rem;
+  width: 100%;
+  background-image: linear-gradient(
+    0deg,
+    rgba(94, 58, 238, 1) 0%,
+    rgba(197, 107, 240, 1) 100%
+  );
+
+  font-size: 0.75rem;
+  color: var(--white);
+
+  border: 0;
+  border-radius: 9999px;
+  box-shadow: inset 0 -2px 25px -4px var(--white);
+}
+
+.Btn-Container {
+  display: flex;
+  height: fit-content;
+  background-color: #1d2129;
+  border-radius: 40px;
+  box-shadow: 0px 5px 10px #bebebe;
+  justify-content: space-between;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+}
+.icon-Container {
+  width: 45px;
+  height: 45px;
+  background-color: #f59aff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid #1d2129;
+}
+.text {
+  width: calc(170px - 45px);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.1em;
+  letter-spacing: 1.2px;
+}
+.icon-Container svg {
+  transition-duration: 1.5s;
+}
+.Btn-Container:hover .icon-Container svg {
+  transition-duration: 1.5s;
+  animation: arrow 1s linear infinite;
+}
+@keyframes arrow {
+  0% {
+    opacity: 0;
+    margin-left: 0px;
+  }
+  100% {
+    opacity: 1;
+    margin-left: 10px;
+  }
+}
+
+.Btn-Container-Left {
+  display: flex;
+  height: fit-content;
+  background-color: #1d2129;
+  border-radius: 40px;
+  box-shadow: 0px 5px 10px #bebebe;
+  justify-content: space-between;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+  flex-direction: row-reverse; /* Ensures the arrow is on the left */
+}
+.icon-Container-Left {
+  transform: scaleX(-1);
+  width: 45px;
+  height: 45px;
+  background-color: #f59aff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 3px solid #1d2129;
+}
+.text-Left {
+  width: calc(170px - 45px);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.1em;
+  letter-spacing: 1.2px;
+}
+.icon-Container-Left svg {
+  transition-duration: 1.5s;
+}
+.Btn-Container-Left:hover .icon-Container-Left svg {
+  transition-duration: 1.5s;
+  animation: arrow-left 1s linear infinite;
+}
+@keyframes arrow-left {
+  0% {
+    opacity: 0;
+    margin-left: 0px;
+  }
+  100% {
+    opacity: 1;
+    margin-left: 10px;
+  }
 }
